# reimagined-spoon

./: README.md  ROBOT READ ME.md  ROBOT_README.md  main.py  pyproject.toml
Conversations/: Convo1.md
Unit Tests/: test_cv_box_detection.py  test_example_name_sheet_ods.py  test_math_output_artifacts.py  test_math_wrong_answer_artifacts.py  test_ocr_ensemble.py  test_submission_answer_extraction.py
Unit Tests/fixtures/: Example Name sheet.ods
Unit Tests/output/math_artifacts/: graded_sample_correct.summary.txt  graded_sample_wrong.summary.txt  grades_output.xlsx
ai_final_project/: __init__.py  __main__.py  cv_boxes.py  main.py  roster.py
ai_final_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_final_project/ocr/: __init__.py  engines.py  ensemble.py  types.py
ai_final_project/ui/: main_window.py
