[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.0",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
]

[project.scripts]
grader = "ai_final_project.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["ai_final_project*"]
